Comunicacion de backend nodejs con backend flask con rabbitmq y cambios en readme

--- a/backend-flask/server/.env
+++ b/backend-flask/server/.env
@@ -1,7 +1,7 @@
 JWT_SECRET=SECRET_KEY
 SERVICE_EMAIL=usuario3.test@test.com
 SERVICE_PASSWORD=password123
-DATABASE_URL="postgresql://brujula_test_db_owner:EVAIZ5hTRd1K@ep-floral-hall-a56zspl1.us-east-2.aws.neon.tech/brujula_test_db?sslmode=require"
+DATABASE_URL="url"
 # RabbitMQ Configuration
 RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
