--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js",
     "seed": "ts-node prisma/seed.ts"
-    
   },
   "author": "",
   "license": "ISC",
@@ -35,6 +34,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
