--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.15",
     "amqplib": "^0.10.4",
     "axios": "^1.7.7",
@@ -40,6 +41,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jose": "^5.9.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "zod": "^3.23.8"
   }
