--- a/backend-scraper/.env
+++ b/backend-scraper/.env
@@ -10,3 +10,5 @@ RABBITMQ_PASSWORD=your_secure_password
 RABBITMQ_QUEUE=comentarios_scraping_queue
 RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
 SPLASH_URL=http://splash:8050
+CELERY_BROKER_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
+CELERY_RESULT_BACKEND=rpc://
