--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,25 +24,59 @@ services:
     environment:
       - DATABASE_URL=postgresql://brujula_test_db_owner:EVAIZ5hTRd1K@ep-floral-hall-a56zspl1.us-east-2.aws.neon.tech/brujula_test_db?sslmode=require
       - JWT_SECRET=SECRET_KEY
+      - RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672/
     networks:
       - app-network
 
 
   backend-flask:
     build:
-      context: ./backend-flask
+      context: ./backend-scraper
       dockerfile: Dockerfile
-    container_name: backend-flask
+    container_name: backend-scraper
     ports:
       - "5000:5000"
     volumes:
-      - ./backend-flask/server:/app
+      - ./backend-scraper:/app
+    depends_on:
+      - rabbitmq
+      - celery-worker
+    environment:
+    - RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
+    - RABBITMQ_QUEUE=comentarios_scraping_queue
+    - RABBITMQ_USER=scraping_service
+    - RABBITMQ_PASSWORD=your_secure_password
+    - RABBITMQ_HOST=rabbitmq
+    - RABBITMQ_PORT=5672
+    - DATABASE_URL=postgresql://brujula_test_db_owner:EVAIZ5hTRd1K@ep-floral-hall-a56zspl1.us-east-2.aws.neon.tech/brujula_test_db?sslmode=require
+    - JWT_SECRET=SECRET_KEY
+    - SERVICE_EMAIL=usuario3.test@test.com
+    - SERVICE_PASSWORD=password123
+    - CELERY_BROKER_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
+    - CELERY_RESULT_BACKEND=rpc://
+    networks:
+      - app-network
+
+
+  celery-worker:
+    build:
+      context: ./backend-scraper
+      dockerfile: Dockerfile
+    container_name: celery-worker
     depends_on:
       - rabbitmq
     environment:
-      - RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672/
+      - RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
+      - RABBITMQ_QUEUE=comentarios_scraping_queue
+      - RABBITMQ_USER=scraping_service
+      - RABBITMQ_PASSWORD=your_secure_password
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
       - DATABASE_URL=postgresql://brujula_test_db_owner:EVAIZ5hTRd1K@ep-floral-hall-a56zspl1.us-east-2.aws.neon.tech/brujula_test_db?sslmode=require
       - JWT_SECRET=SECRET_KEY
+      - CELERY_BROKER_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
+      - CELERY_RESULT_BACKEND=rpc://
+    command: celery -A app.celery worker --loglevel=info
     networks:
       - app-network
 
@@ -52,8 +86,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/src
-      - /src/app_modules
+      - ./frontend:/app
+      - /app/app_modules
     depends_on:
       - backend
     command: npm start
