--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js",
     "seed": "ts-node prisma/seed.ts",
-    "prisma:docker":"npx prisma generate"
+    "prisma:docker": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
@@ -44,6 +44,7 @@
     "jose": "^5.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   }
 }
