--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - DATABASE_URL=postgresql://brujula_test_db_owner:EVAIZ5hTRd1K@ep-floral-hall-a56zspl1.us-east-2.aws.neon.tech/brujula_test_db?sslmode=require
       - JWT_SECRET=SECRET_KEY
       - RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672/
+      - RABBITMQ_QUEUE=comentarios_scraping_queue
+      - RABBIT_NOTIFICATIONS_QUEUE=notificaciones_insert
     networks:
       - app-network
 
