--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^1.7.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
