cambios en db y logs de lista-cambios

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://brujula_test_db_owner:EVAIZ5hTRd1K@ep-floral-hall-a56zspl1.us-east-2.aws.neon.tech/brujula_test_db?sslmode=require"
+DATABASE_URL="postgresql://brujuladederechosdb_owner:OWz5hXby7sZC@ep-white-feather-a505h2nv.us-east-2.aws.neon.tech/brujuladederechosdb?sslmode=require"
 JWT_SECRET=SECRET_KEY
 RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
 RABBITMQ_QUEUE=comentarios_scraping_queue
