--- a/backend-scraper/requirements.txt
+++ b/backend-scraper/requirements.txt
@@ -1,6 +1,5 @@
 Flask
-Scrapy
-scrapy-splash
+Scrapy==2.12.0
 pika
 python-dotenv
 six
@@ -8,4 +7,6 @@ pyjwt
 celery
 crochet
 pysentimiento
+pyOpenSSL==23.2.0
+cryptography==41.0.3
 
