--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "brujuladederechos",
   "version": "0.1.0",
   "private": true,
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
