--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "@types/socket.io": "^3.0.2",
     "prisma": "^5.19.1",
@@ -43,6 +44,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jose": "^5.9.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "socket.io": "^4.8.1",
