cambios para post y edit de comentarios clasificados, rate-limit, cambios en formulario para mejorar operaciones POST-PATCH

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,4 @@ RABBITMQ_URL=amqp://scraping_service:your_secure_password@rabbitmq:5672
 RABBITMQ_QUEUE=comentarios_scraping_queue
 NOTIFICATION_QUEUE=notificaciones_insert
 RABBIT_NOTIFICATIONS_QUEUE=notificaciones_insert
+RESEND_KEY=re_4pEqrWRb_88uSyzt4PDb5pwuaR4rjFi9r
