--- a/backend/package.json
+++ b/backend/package.json
@@ -42,9 +42,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
     "jose": "^5.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "resend": "^4.0.1",
     "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   }
